--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ activityCompose = "1.8.0"
 composeBom = "2024.09.00"
 assertj = "3.27.3"
 mockk = "1.13.13"
+hilt = "2.56.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version = "1.17.0" }
@@ -38,8 +39,13 @@ androidx-test-runner = { group = "androidx.test", name = "runner", version = "1.
 androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.7.0" }
 assertj-core = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 mockk-core = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
